--- a/src/content/posts/articles/cormyr-1493-1.mdx
+++ b/src/content/posts/articles/cormyr-1493-1.mdx
@@ -18,4 +18,7 @@ tags:
 
 [Adventuring Charter.docx](https://1drv.ms/w/s!Atcrhwwo1lBA0bIt8F9clSG5CRGr7Q?e=AdG2FZ)
 
-[adventuring-charter](https://cyborgsandmages.files.wordpress.com/2021/04/adventuring-charter.pdf)[Скачать](https://cyborgsandmages.files.wordpress.com/2021/04/adventuring-charter.pdf)
+[adventuring-charter](https://cyborgsandmages.files.wordpress.com/2021/04/adventuring-charter.pdf)
+
+
+[Скачать](https://cyborgsandmages.files.wordpress.com/2021/04/adventuring-charter.pdf)
