--- a/src/content/posts/articles/dmg1-dnd30-chapter1.mdx
+++ b/src/content/posts/articles/dmg1-dnd30-chapter1.mdx
@@ -15,7 +15,7 @@ tags:
 
 Ниже рассмотрены различные обязанности ДМ-а. Вы обнаружите, что некоторые из них вы предпочитаете, больше чем другие. Как и в любом хобби, сосредоточьтесь на том, что вам больше приносит удовлетворение, но помните, что все другие обязанности также важны.
 
-# ПОДГОТОВКА ПРИКЛЮЧЕНИЙ
+## ПОДГОТОВКА ПРИКЛЮЧЕНИЙ
 
 Ваша первичная роль в игре состоит в создании и предоставлении приключения, в котором другие игроки могли бы отыгрывать своих персонажей. Чтобы сделать так, вам необходимо потратить некоторое время, иногда очень значительное, для подготовки игры. Причем не важно, сами ли вы создаете свои собственные приключения или используете купленные готовые приключения.
 
@@ -31,7 +31,7 @@ tags:
 
 Однако помните, что вы тот, кто должен провести это приключение. Это означает, что все, что вы хотите изменить, вы можете изменить. Фактически, вы часто обнаружите, что вы должны сделать, по крайней мере, незначительные изменения, чтобы приключение соответствовало вашей собственной кампании и задействовало ваших игроков. Вы можете много повеселиться, заменив в приключение одного злодея на другого, если ваши игроки уже слышали об этом приключении. Также вы можете изменить предысторию приключения так, чтобы оно вовлекло персонажей ваших игроков. Причем многие способы, которыми вы можете это проделать, разработчикам модуля даже в голову никогда не приходили.
 
-# ОБУЧЕНИЕ ИГРЕ
+## ОБУЧЕНИЕ ИГРЕ
 
 Иногда вам придется учить новичков, как играть. Это не бремя, а благоприятная возможность. Обучение других людей правилам игры может обеспечить вас новыми игроками и позволит вам наставить их на путь, как стать первоклассным ролевиком. Легче учится, когда играешь с тем, кто уже знает правила. Те, кто обучается у хорошего преподавателя во время интересной игры, с большей вероятностью присоединятся к этому хобби на долгий срок.
 
@@ -51,7 +51,7 @@ tags:
 
 Последовательность – ключ к правдоподобию вымышленного мира. Когда они возвращаются в город, чтобы закупить припасы, РС должны встретиться с некоторыми теми же самыми РС, которых они видели ранее. Скоро они узнают имя барменши, и она также будет помнить их имена. Однако как только вы достигаете этого уровня последовательности, сделайте случайное изменение. Если РС возвращаются в город, чтобы купить лошадей в конюшне, то сделайте так, чтобы они обнаружили, что человек, который заведовал конюшней, отправился домой в большой город за холмами, и теперь его племянник заведует семейным бизнесом. Такой тип изменений не имеет никакого прямого отношения к самим РС, но позволяют им ощутить то, что их приключения проходят в живом мире, таком же реальным, как они сами. Тогда этот мир перестанет быть просто безжизненным фоном, существующим только для того, чтобы РС исследовали его подземелья.
 
-# СТИЛЬ ИГРЫ
+## СТИЛЬ ИГРЫ
 
 ДМ подготавливает приключение и мир. Игроки и ДМ вместе создают игру. Однако ответственность, каким способом проводить игру, ложится на вас. Самое лучшее – это узнать, что хотят ваши игроки и понять, что именно вы хотите от игры сами. Существует много стилей игры, но лишь несколько из них детализированы ниже в качестве примеров.
 
@@ -135,7 +135,7 @@ tags:
 
 Наконец, время от времени постарайтесь на самом деле удивить ваших игроков. Так NPC, которого они считали злодеем, может оказаться изменившим форму единорогом, действующим из лучших побуждений. Нить, которая они думали, приведет их к хранилищу сокровищ, оказывается подставой (смотри дальше в этой главе, как сюрпризы могут победить игровое мышление). Если РС находятся в комнате подземелья, а огненный гигант собирается ворваться в комнату и напасть, сохраняйте свой голос спокойным, описывая комнату. Затем внезапно возвысьте голос и вскочите на ноги, когда гигант входит внутрь. Это привлечет внимание игроков.
 
-# СОХРАНЕНИЕ ИГРОВОГО БАЛАНСА
+## СОХРАНЕНИЕ ИГРОВОГО БАЛАНСА
 
 Много людей говорят об игровом балансе. Они ссылаются на правила, которые им нравятся, как «сбалансированные» и правила, которые они считают, работают «несбалансированно». Но что это означает на самом деле? Весь игровой баланс должен обеспечить большинство выбранных персонажей относительно равными. Сбалансированная игра – та, в которой персонаж не доминирует над остальными благодаря выбору, который он сделал (раса, класс, умения, навыки, заклинания, магические предметы и т.д.). Это также отражается на остальных персонажах, которые не настолько могущественны перед проблемами, с которыми им придется столкнуться, даже если они не полностью беспомощны перед ними.
 
@@ -157,7 +157,7 @@ tags:
 
 Разобраться с Проблемой вне Игры: «Вне игры» означает что-то, что происходит в реальном мире, но имеет непосредственное воздействие на игру. Внеигровое разрешение проблемы означает, что в промежутке между сессиями стоит поговорить с игроком, что игра становится разбалансированной из-за его персонажа, необходимо что-либо изменить, или игра может провалиться. Благоразумная личность, которой интересно продолжение игры пойдет навстречу вам в игре (возможно передав в дар слишком могущественную вещь соответствующему NPC) или вне игры (возможно стирая дисбалансирующую способность из своего листа персонажа и делая вид, что ее и не было там никогда). Однако вас стоит предупредить, не каждый игрок благоразумен. Многим сильно не понравится такое ваше вторжение, они могут обидеться за потерю великой способности или предмета, который их персонаж «заработал». Даже если они напрямую не скажут вам об этом, они будут сокрушаться о своей потери. Что еще хуже, после неудачного изменения таким способом, им будет казаться все надуманным, взятым с неба, в случае если вы попробуете внести баланс в игру игровым способом. Никто не говорил, что вести игру будет легко.
 
-# ИЗМЕНЕНИЕ ПРАВИЛ
+## ИЗМЕНЕНИЕ ПРАВИЛ
 
 В процессе игры, вам иногда захочется изменить правила. Это в порядке вещей. Однако изменение правил будет испытанием для ДМ-а с небольшим опытом проведения игр.
 
@@ -199,7 +199,7 @@ tags:
 
 Когда игра становится разбалансированной, вы должны установить порядок игровыми или неигровыми средствами в зависимости от ситуации и вовлеченных в это игроков. Дисбалансирующие способности персонажа или изделия лучше сделать игровыми методами, но изменения правил могут быть сделаны только неигровыми средствами. В некоторый момент лучше признаться в ошибке игрокам, и после этого сделать необходимые исправления, чтобы сохранить фан, баланс и нормальное ведение игры. Чем более благоразумными будете вы, тем более вероятно будет то, что ваши игроки поймут вас.
 
-# ПРОВЕДЕНИЕ ИГРОВОЙ СЕССИИ
+## ПРОВЕДЕНИЕ ИГРОВОЙ СЕССИИ
 
 После того как все приготовлено, и каждый садится за игровой стол, вы начинаете. Это ваше шоу. Здесь показаны некоторые моменты, на которые вы должны обратить внимание, в то время как находитесь за игровым столом или еще до того, как сесть за него. Эти моменты помогут вам провести игру настолько гладко, насколько возможно.
 
@@ -501,7 +501,7 @@ tags:
 
 Вы можете захотеть вознаградить очками опыта в конце каждой сессии или можете отложить это на конец приключения. Это вы решаете сами. Однако за стандарт принимается начисление очков опыта в конце сессии, так чтобы игроки, чьи персонажи получают уровень, имели время выбрать новые заклинания, купить умения и позаботиться о других деталях, связанных с продвижением в уровне.
 
-# КОНТРОЛЬНЫЙ СПИСОК ИГРОВОЙ СЕССИИ
+## КОНТРОЛЬНЫЙ СПИСОК ИГРОВОЙ СЕССИИ
 
 1\. Обустройте место, где будет проходить сессия. Даже если игра проходит не в вашем доме, вы должны обустроить все так, чтобы вы были довольны, как располагаетесь вы и игроки. У вас должно быть достаточно места, чтобы разместить ваши записи, книги и т.д. Убедитесь, что каждый игрок может вас слышать и видеть.
 
