--- a/src/content/posts/articles/economy-dnd-model-2.mdx
+++ b/src/content/posts/articles/economy-dnd-model-2.mdx
@@ -16,6 +16,10 @@ tags:
 
 ---
 
+[Индекс статей по экономике D&D](https://cyborgsandmages.com/posts/articles/index-economy)
+
+---
+
 [В первой части](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1) мы осмотрели основные официальные подходы к стоимости волшебных предметов в пятой редакции и самое время подытожить.
 
 ## Основное в правилах пятой редакции про стоимость и создание волшебных предметов
