--- a/src/content/posts/articles/economy-dnd-model-3.mdx
+++ b/src/content/posts/articles/economy-dnd-model-3.mdx
@@ -11,6 +11,8 @@ tags:
 
 Это третья часть из цикла авторских материалов про экономическую модель пятой редакции и и попытки меня и других авторов решения её проблем.
 
+[Индекс статей по экономике D&D](https://cyborgsandmages.com/posts/articles/index-economy)
+
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
 [Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
