--- a/src/content/posts/articles/economy-dnd-model-7.mdx
+++ b/src/content/posts/articles/economy-dnd-model-7.mdx
@@ -14,6 +14,8 @@ tags:
 
 В первых шести частях этого цикла я говорил о способах оценки стоимости создания волшебных предметов.
 
+[Индекс статей по экономике D&D](https://cyborgsandmages.com/posts/articles/index-economy)
+
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
 [Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
