--- a/src/content/posts/articles/homebrew-campaign-activity-missions-and-quests.mdx
+++ b/src/content/posts/articles/homebrew-campaign-activity-missions-and-quests.mdx
@@ -1,5 +1,5 @@
 ---
-title: '[Homebrew] Деятельность кампании: выполнение задания'
+title: 'Деятельность кампании: выполнение задания'
 description: 'Описание механики выполнения задания вне игрового стола - за занавесом'
 date: '2022-06-22'
 tags:
