--- a/src/content/posts/articles/index-economy.mdx
+++ b/src/content/posts/articles/index-economy.mdx
@@ -21,7 +21,25 @@ tags:
 
 ---
 
+[Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
+[Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
+
+[Часть 3, примеры оценки стоимости волшебных предметов](https://cyborgsandmages.com/posts/articles/economy-dnd-model-3)
+
+[Часть 4, альтернативный подход к ценам создания свитков и услуг заклинателей](https://cyborgsandmages.com/posts/articles/economy-dnd-model-4)
+
+[Часть 5, услуги наемников](https://cyborgsandmages.com/posts/articles/economy-dnd-model-5)
+
+[Часть 6, анализ подходов Кобольд Пресс](https://cyborgsandmages.com/posts/articles/economy-dnd-model-6)
+
+[Часть 7](https://cyborgsandmages.com/posts/articles/economy-dnd-model-7)
+
+[Часть 8](https://cyborgsandmages.com/posts/articles/economy-dnd-model-8)
+
+[Часть 9](https://cyborgsandmages.com/posts/articles/economy-dnd-model-9)
+
+[Часть 10](https://cyborgsandmages.com/posts/articles/economy-dnd-model-10)
 
 ---
 
