--- a/src/content/posts/articles/economy-dnd-model-1.mdx
+++ b/src/content/posts/articles/economy-dnd-model-1.mdx
@@ -319,6 +319,8 @@ _Источник: Dungeon Master Guide_
 
 ## Перечень статей "Экономическая модель D&D 5e"
 
+[Индекс статей по экономике D&D](https://cyborgsandmages.com/posts/articles/index-economy)
+
 [Часть 1, в которой приводился анализ базовых правил пятой редакции](https://cyborgsandmages.com/posts/articles/economy-dnd-model-1)
 
 [Часть 2, в которой наметился подход к формированию цен](https://cyborgsandmages.com/posts/articles/economy-dnd-model-2)
