--- a/src/content/posts/articles/index-dmg.mdx
+++ b/src/content/posts/articles/index-dmg.mdx
@@ -1,32 +1,32 @@
 ---
-title: Индекс статей и переводов про проверки навыков и характеристик
-description: АВТОРСКАЯ ПОДБОРКА статей и переводов про проверки навыков и характеристик
+title: Индекс материалов по Руководству Мастера
+description: АВТОРСКАЯ ПОДБОРКА фрагментов различных руководств мастера из третьей, четвертой и пятой редакций
 date: 2023-01-01 00:00
 tags:
   - Советы Мастеру
   - Руководство Мастера
   - D&D 5e
+  - D&D 4e
   - D&D 3.5e
   - Core d20 RPG
   - перевод
   - translate
-  - проверки навыков
-  - проверка навыков
-  - проверка характеристик
-  - проверки характеристик
+  - Индекс
 ---
-
-Это тематическая сборка статей и переводов статей и материалов по НРИ, которые посвящены проверкам характеристик и навыков в D&D.
-
-Индекс будет периодически обновляться по мере наполнения сайта дополнительными материалами.
 
 Если вам есть, что нам посоветовать - напишите в [Телеграм](https://t.me/cyborgs_and_mages) или [Discord](https://discord.gg/yrJqvCqU3w).
 
 ---
+[D&D 3.0 Руководство Мастера – Глава 1](https://cyborgsandmages.com/posts/articles/dmg1-dnd30-chapter1)
 
-[Проверки характеристик (навыков) в пятой редакции – опыт применения](https://cyborgsandmages.com/posts/articles/gm-advice-ability-checks)
+[D&D 3.5 Руководство Мастера 2 – Глава 5: Кампании](https://cyborgsandmages.com/posts/articles/dmg2-dnd35-campaigns)
 
-[Групповые проверки навыков в Dungeons and Dragons 5ed и как их использовать](https://cyborgsandmages.com/posts/articles/gm-advice-group-checks)
+[D&D 4 Руководство Мастера - Знай своих игроков](https://cyborgsandmages.com/posts/articles/dmg-dnd-4-part1)
+
+[Злой ГМ - Мастерское Кредо](https://cyborgsandmages.com/posts/translations/angrygm-gm-credo)
+
+
+
 
 ---
 
