--- a/src/content/posts/translations/angrygm-gm-narrativ.mdx
+++ b/src/content/posts/translations/angrygm-gm-narrativ.mdx
@@ -9,8 +9,10 @@ tags:
   - Теория
   - Советы Мастеру
 author: Angry GM
+cover: ~assets/covers/angrygm-gm-narrativ-2-1.webp
 ---
 
+![](images\angrygm-gm-narrativ-2-1.webp)
 
 Прекрасная иллюстрация взята у Мира фантастики
 
