--- a/src/content/posts/translations/angrygm-narrative-structure-for-dummies-4.mdx
+++ b/src/content/posts/translations/angrygm-narrative-structure-for-dummies-4.mdx
@@ -9,6 +9,7 @@ tags:
   - Теория
   - Советы Мастеру
 author: Angry GM
+cover: ~assets/covers/angrygm-gm-narrativ-4-1.webp
 ---
  
 ![](images\angrygm-gm-narrativ-4-1.webp)
