--- a/src/content/posts/translations/angrygm-narrative-structure-for-dummies-3.mdx
+++ b/src/content/posts/translations/angrygm-narrative-structure-for-dummies-3.mdx
@@ -9,6 +9,7 @@ tags:
   - Теория
   - Советы Мастеру
 author: Angry GM
+cover: ~assets/covers/angrygm-gm-narrativ-3-1.webp
 ---
 
 ![](images\angrygm-gm-narrativ-3-1.webp)
