--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -10,6 +10,8 @@ author: Angry GM
 
 Это перечень статей Злого ГМ-а, которые были переведены на русский язык различными переводчиками.
 
+>Злой ГМ - несмотря ни на что является весьма неплохим автором и при этом системно мыслящим, что и обусловило его высокую популярность среди любителей НРИ
+
 ## Разное
 
 [Таро для мастеров- чайников](https://cyborgsandmages.com/posts/translations/angrygm-taro-for-dummies)
@@ -78,7 +80,9 @@ author: Angry GM
 
 Нарративная структура для чайников. Часть 3: Переходим к делу
 
-## Нарративная структура для чайников: Часть 4. Готовые инструменты
+Нарративная структура для чайников: Часть 4. Готовые инструменты
+
+---
 
 Пока статьи не перенесены на этот сайт вы можете просмотреть их на архивном сайте Киборгов и Чародеев:
 
