--- a/src/content/posts/translations/angrygm-gm-narrativ.mdx
+++ b/src/content/posts/translations/angrygm-gm-narrativ.mdx
@@ -64,7 +64,6 @@ cover: ~assets/covers/angrygm-gm-narrativ-2-1.webp
 
 Хорошие уроки здесь... Ну, поменяйте темп, поменяв типы столкновений. И, если есть возможность, всегда лучше идти в кульминацию со слабыми героями, чем с сильными. Вот плохие уроки: на самом деле это не повествовательная структура. Но это не вина JohnnFour. Многие люди неправильно читают и неправильно используют его работу.
 
-
 ## Хорошая структура повествования для каждой ролевой игры
 
 Итак, все эти три структуры обеспечивают некоторые части хорошей повествовательной структуры для приключенческой ролевой игры. Но у них также есть нечеткие кусочки, которые просто никуда не подходят. Значит, мы застряли, просто отрубая кусочки и пытаясь втиснуть остальные квадратные части конструкции в круглые отверстия РПГ? Есть ли какая-то одна хорошая формула повествовательной структуры для приключений и кампаний в ролевой игре? Одна с некоторыми общими повествовательными элементами, которые всегда должны быть включены? Короче говоря, существует ли простой контрольный список, который позволит нам создавать хорошие истории о ролевых играх, не читая ерунду Кэмпбелла?
@@ -75,4 +74,4 @@ cover: ~assets/covers/angrygm-gm-narrativ-2-1.webp
 
 Но, как и во многих других ролевых играх, счастливый конец будет по другую сторону кульминации. Потому что у нас не хватило времени на этой сессии.
 
-Источник: https://vk.com/@dullgm-narrativnaya-struktura-dlya-chainikov-chast-2
+[Источник](https://vk.com/@dullgm-narrativnaya-struktura-dlya-chainikov-chast-2)
