--- a/src/content/posts/translations/angrygm-narrative-structure-for-dummies-4.mdx
+++ b/src/content/posts/translations/angrygm-narrative-structure-for-dummies-4.mdx
@@ -106,10 +106,8 @@ cover: ~assets/covers/angrygm-gm-narrativ-4-1.webp
 
 > **(Необязательно) Большой провал / Последнее испытание:** что-то важное - на самом деле, сама история - обращается против героев, и им приходится с этим справляться. Они либо проходят испытание и переходят к финальному конфликту, либо оказываются на самом низком уровне и решают положить конец конфликту раз и навсегда.
 
-> **Кульминация:** герои сталкиваются с любым конфликтом, который создавался с самого начала, или сталкиваются с чем-то, что позволит им разрешить этот конфликт один раз или потерпеть неудачу. Если им это удастся, они выиграли, и приключение окончено. Если они потерпят неудачу, они проиграют, а приключение все равно окончено. А может они мертвы. Иногда бывает так.
+**Кульминация:** герои сталкиваются с любым конфликтом, который создавался с самого начала, или сталкиваются с чем-то, что позволит им разрешить этот конфликт один раз или потерпеть неудачу. Если им это удастся, они выиграли, и приключение окончено. Если они потерпят неудачу, они проиграют, а приключение все равно окончено. А может они мертвы. Иногда бывает так.
 
 **_В следующей части: Точки сюжета Кэмпбелла_**
 
- 
-
-Источник: <[https://vk.com/@dullgm-narrativnaya-struktura-dlya-chainikov-chast-4](https://vk.com/@dullgm-narrativnaya-struktura-dlya-chainikov-chast-4)\>
+https://vk.com/@dullgm-narrativnaya-struktura-dlya-chainikov-chast-4
