--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -14,13 +14,15 @@ author: Angry GM
 
 ## Разное
 
+
+
 [Таро для мастеров- чайников](https://cyborgsandmages.com/posts/translations/angrygm-taro-for-dummies)
 
 [Как играть в открытом мире Angry GM](https://cyborgsandmages.com/posts/translations/translate-how-to-play-open-world-angry-gm)
 
 [Мастерское Кредо](https://cyborgsandmages.com/posts/translations/angrygm-gm-credo)
 
-ТЕМП в НРИ (Pacing) от Злюки ГМа
+[ТЕМП в НРИ (Pacing) от Злюки ГМа](https://cyborgsandmages.com/posts/translations/angrygm-pacing-in-rpg)
 
 [Сила редактуры](https://cyborgsandmages.com/posts/translations/angrygm-the-power-of-editing)
 
@@ -40,9 +42,9 @@ author: Angry GM
 
 Что делает исследование исследованием?
 
-Выиграть ролевую игру
+[Выиграть ролевую игру](https://cyborgsandmages.com/posts/translations/angrygm-winning-rpg)
 
-Основная механика Злого ГМ-а
+[Основная механика Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-core-mechanics)
 
 [5 простых правил для игр с системой навыков](https://cyborgsandmages.com/posts/translations/angrygm-five-simple-rules-for-games-with-skill-system)
 
@@ -54,7 +56,7 @@ author: Angry GM
 
 [Представление вашего персонажа](https://cyborgsandmages.com/posts/translations/angrygm-presentation-of-your-pc)
 
-Памятка для игроков #2: Изображение персонажей на игре
+[Памятка для игроков #2: Изображение персонажей на игре](https://cyborgsandmages.com/posts/translations/angrygm-player-memo-2)
 
 ## Деятельность простоя
 
@@ -66,21 +68,24 @@ author: Angry GM
 
 ## Столкновения
 
+[Всегда говори мне о шансах: переосмысление случайных встреч (часть 1)](https://cyborgsandmages.com/posts/translations/always-tell-me-about-chances)
+
+[Ни случайных, ни встреч: изменение дизайна случайных встреч (часть 2)](https://cyborgsandmages.com/posts/translations/anfgrygm-no-random-no-encouhter-changing-the-core-angry-gm)
+
 Как строить клевые энкаунтеры!
 
 [Четыре вещи о которых вы не слышали, которые делают энкаунтеры не отстойными](https://cyborgsandmages.com/posts/translations/angrygm-four-things-make-encounters-not-suck)
 
-[Всегда говори мне о шансах: переосмысление случайных встреч (часть 1)](https://cyborgsandmages.com/posts/translations/always-tell-me-about-chances)
 
 ## Нарративная структура для чайников
 
-Нарративная структура для чайников: Часть 1.
+[Нарративная структура для чайников: Часть 1.](https://cyborgsandmages.com/posts/translations/angrygm-narrative-structure-for-dummies-1)
 
-Нарративная структура для чайников: Часть 2.
+[Нарративная структура для чайников: Часть 2.](https://cyborgsandmages.com/posts/translations/angrygm-gm-narrativ)
 
-Нарративная структура для чайников. Часть 3: Переходим к делу
+[Нарративная структура для чайников. Часть 3: Переходим к делу](https://cyborgsandmages.com/posts/translations/angrygm-narrative-structure-for-dummies-3)
 
-Нарративная структура для чайников: Часть 4. Готовые инструменты
+[Нарративная структура для чайников: Часть 4. Готовые инструменты](https://cyborgsandmages.com/posts/translations/angrygm-narrative-structure-for-dummies-4)
 
 ---
 
