--- a/src/content/singles/home.mdx
+++ b/src/content/singles/home.mdx
@@ -94,3 +94,31 @@ links:
 На всю нашу деятельность расходуются ресурсы и время.
 
 Как поддержать нашу деятельность вы можете узнать в разделе [Поддержать проект](https://cyborgsandmages.com/support-us)
+
+---
+
+Просмотреть тематические перечни статей и переводов вы можете ниже
+
+
+[Вождение городских кампаний](https://cyborgsandmages.com/posts/articles/index-сity-campaigns)
+
+[Тактика существ и столкновения с ними](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
+
+[Социальные столкновения](https://cyborgsandmages.com/posts/articles/index-social-encounters)
+
+[Деятельность простоя](https://cyborgsandmages.com/posts/articles/index-downtime)
+
+[Экономика D&D](https://cyborgsandmages.com/posts/articles/index-economy)
+
+[Создание магических предметов D&D](https://cyborgsandmages.com/posts/articles/index-creating-magic-items)
+
+[Наемные солдаты и наемники D&D](https://cyborgsandmages.com/posts/articles/index-hirelings)
+
+[Исследование гексов](https://cyborgsandmages.com/posts/articles/index-hexcrawl)
+
+[Твердыня](https://cyborgsandmages.com/posts/articles/index-stronghold)
+
+[Массовые сражения](https://cyborgsandmages.com/posts/articles/index-mass-combat)
+
+[Проверки характеристик](https://cyborgsandmages.com/posts/articles/index-skill-checks)
+
