--- a/src/content/posts/translations/angrygm-index.mdx
+++ b/src/content/posts/translations/angrygm-index.mdx
@@ -52,6 +52,8 @@ author: Angry GM
 
 [Иллюзии - это чушь... Но на самом деле это не так](https://cyborgsandmages.com/posts/translations/angrygm-illusions-are-bullshit)
 
+[Кости напряженности](https://cyborgsandmages.com/posts/core-d20/about-tension-dice)
+
 ## Советы игрокам
 
 [Представление вашего персонажа](https://cyborgsandmages.com/posts/translations/angrygm-presentation-of-your-pc)
