--- a/src/content/posts/core-d20/bestiary-dire-template.mdx
+++ b/src/content/posts/core-d20/bestiary-dire-template.mdx
@@ -1,6 +1,6 @@
 ---
 title: Бестиарий - шаблон Лютого зверя
-description: АВТОРСКАЯ ЗАМЕТКА про создание шаблона Лютого зверя
+description: "АВТОРСКАЯ ЗАМЕТКА про создание шаблона Лютого зверя #besiary #dnd5e #template #dire #cored20rpg" 
 date: 2023-11-03
 tags:
   - Бестиарий
@@ -8,6 +8,7 @@ tags:
   - Лютый
   - Лютый волк
   - Шаблон
+  - Core d20 RPG
 ---
 
 Шаблон Лютого зверя был одним из самых ходовых в 3.5 редакции, но к сожалению в 5-ой редакции он в официальном Бестиарии отсутствует.
