--- a/src/content/posts/core-d20/bestiary-dire-template.mdx
+++ b/src/content/posts/core-d20/bestiary-dire-template.mdx
@@ -70,6 +70,8 @@ tags:
 
 **Урон:** благодаря увеличению размера к урону добавляется кость урона за размер, а также увеличивается дополнительный урон от Силы.
 
+**Атаки:** При большой разнице Атакующего ПО и Защитного ПО - добавить существу свойство Мультиатака, но уменьшить количество Костей Хитов.
+
 Остальные параметры существа остаются неизменными.
 
 После внесения изменений необходимо пересчитать новый Показатель Опасности существа.
