--- a/src/content/posts/core-d20/bestiary-warbeast-template.mdx
+++ b/src/content/posts/core-d20/bestiary-warbeast-template.mdx
@@ -1,5 +1,5 @@
 ---
-title: Бестиарий - шаблон Боеввого Зверя
+title: Бестиарий - шаблон Боевого Зверя
 description: "АВТОРСКАЯ ЗАМЕТКА про создание шаблона Военного зверя #besiary #dnd5e #template #warbeast #cored20rpg" 
 date: 2023-11-03
 tags:
