--- a/src/content/posts/core-d20/bestiary-warbeast-template.mdx
+++ b/src/content/posts/core-d20/bestiary-warbeast-template.mdx
@@ -63,7 +63,7 @@ tags:
 
 ---
 
-**Лицензия:** Шаблон лютого зверя распространяется под лицензией CC-BY 4.0 
+**Лицензия:** Шаблон боевого зверя распространяется под лицензией CC-BY 4.0 
 
 Механики статблока основаны на материалах Wizards of the Coast, распространяемых под лицензией CC-BY 4.0
 
