--- a/src/content/posts/core-d20/bestiary-warbeast-template.mdx
+++ b/src/content/posts/core-d20/bestiary-warbeast-template.mdx
@@ -12,7 +12,7 @@ tags:
 ---
 
 
-Боевой зверь - это существо, рожденное и выращенное для использования в качестве всадника. Выведенные для исключительной силы, агрессивности и уверенности в ногах, эти существа отличаются мощным телосложением, волевым характером и открытой воинственностью.
+Боевой зверь - это существо, рожденное и выращенное для использования в качестве верхового животного. Выведенные для исключительной силы, агрессивности и уверенности в ногах, эти существа отличаются мощным телосложением, волевым характером и открытой воинственностью.
 
 ## Создание боевого зверя
 
