--- a/src/content/posts/core-d20/bestiary-warbeast-template.mdx
+++ b/src/content/posts/core-d20/bestiary-warbeast-template.mdx
@@ -43,11 +43,11 @@ tags:
 
 Если бзовое существо -  насекомое, то оно не получает эту особенность из-за своего низкого интеллекта.
 
-**Навыки** Боевой зверь получает владение навыками Атлетики и Восприятия, если не владел до этого
+**Навыки** Боевой зверь получает владение навыками Атлетики и Восприятия, если не владел до этого.
 
-**Спасброски** Боевой зверь получает владение спасбросками Телосложения и Мудрости, если не владель до этого
+**Спасброски** Боевой зверь получает владение спасбросками Телосложения и Мудрости, если не владел до этого.
 
-**Показатель Опасности:** пересчитать в соответствии с правилами DMG
+**Показатель Опасности:** пересчитать в соответствии с правилами Руководства Мастера.
 
 ## Обучение боевого зверя
 
